--- a/templates/dashboard/products.html
+++ b/templates/dashboard/products.html
@@ -37,7 +37,7 @@
                 {% for product in product %}
                 <tr>
                     <td>{{ product.name }}</td>
-                    <td>{{ product.category }}</td>
+                    <td>{{ product.department }}</td>
                     <td>{{ product.quantity }}</td>
                     <td>
                         <a class="btn btn-info btn-sm mr-2"
