--- a/templates/dashboard/order.html
+++ b/templates/dashboard/order.html
@@ -19,7 +19,7 @@
                 {% for order in order %}
                 <tr>
                     <td>{{ order.name }}</td>
-                    <td>{{ order.name.category }}</td>
+                    <td>{{ order.name.department }}</td>
                     <td>{{ order.order_quantity }}</td>
                     <td>{{ order.customer.username }}</td>
                 </tr>
