logout done and desing aslo make

--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--favicon-->
-	<link rel="icon" href="{% static 'assets/images/favicon-32x32.png' %}" type="image/png" />
+	<link rel="icon" href="{% static 'assets/images/fav1.ico' %}" type="image/png" />
 	<!--plugins-->
 	<link href="{% static 'assets/plugins/simplebar/css/simplebar.css' %}" rel="stylesheet" />
 	<link href="{% static 'assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css' %}" rel="stylesheet" />
@@ -19,7 +19,8 @@
 	<link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="{% static 'assets/css/app.css' %}" rel="stylesheet">
 	<link href="{% static 'assets/css/icons.css' %}" rel="stylesheet">
-	<title>Rukada - Responsive Bootstrap 5 Admin Template</title>
+	<title>Register  - Hamesha Inventory Management System</title>
+</head>
 </head>
 
 <body class="bg-login">
