--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -19,9 +19,17 @@
                     <a class="nav-link text-white" href="{% url 'user-profile' %}">{{ user.username }} Profile
                         <span class="sr-only">(current)</span></a>
                 </li>
+
+                
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'user-logout' %}">Logout</a>
+                    <form method="POST" action="{% url 'user-logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-link nav-link text-white" style="border: none; padding: 0; background: none;">
+                            Logout
+                        </button>
+                    </form>
                 </li>
+                
             </ul>
             {% else %}
             <ul class="navbar-nav ml-auto">
