--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -1,4 +1,4 @@
-{% extends 'partials/base.html' %}
+{% extends 'partials/base0.html' %}
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
