--- a/templates/partials/base0.html
+++ b/templates/partials/base0.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- favicon -->
-	<link rel="icon" href="{% static 'images/favicon-32x32.png' %}" type="image/png" />
+	<link rel="icon" href="{% static 'assets/images/hm.png' %}" type="image/png" />
 	<!-- plugins -->
 	<link href="{% static 'assets/plugins/vectormap/jquery-jvectormap-2.0.2.css' %}" rel="stylesheet"/>
 	<link href="{% static 'assets/plugins/simplebar/css/simplebar.css' %}" rel="stylesheet" />
