--- a/templates/user/logout.html
+++ b/templates/user/logout.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--favicon-->
-	<link rel="icon" href="{% static 'assets/images/fav.png' %}" type="image/png" />
+	<link rel="icon" href="{% static 'assets/images/hm.png' %}" type="image/png" />
 	<!-- loader-->
 	<link href="{% static 'assets/css/pace.min.css' %}" rel="stylesheet" />
 	<script src="{% static 'assets/js/pace.min.js' %}"></script>
