--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--favicon-->
-	<link rel="icon" href="{% static 'assets/images/fav.png' %}" type="image/png" />
+	<link rel="icon" href="{% static 'assets/images/hm.png' %}" type="image/png" />
 	<!--plugins-->
 	<link href="{% static 'assets/plugins/simplebar/css/simplebar.css' %}" rel="stylesheet" />
 	<link href="{% static 'assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css' %}" rel="stylesheet" />
